--- a/src/app/layout/header/header.html
+++ b/src/app/layout/header/header.html
@@ -10,7 +10,7 @@
     <!-- Navegación para Escritorio -->
     <nav class="hidden lg:flex items-center gap-6 text-sm text-slate-300">
       <a routerLink="/" routerLinkActive="text-lime-300" class="hover:text-lime-300 transition">Inicio</a>
-      @if (authService.currentUser()?.rol === 'admin' || authService.currentUser()?.rol === 'instructor') {
+      @if (authService.user()?.rol === 'admin' || authService.user()?.rol === 'instructor') {
         <a routerLink="/dashboard" routerLinkActive="text-lime-300" class="hover:text-lime-300 transition">Dashboard</a>
       }
       <a class="hover:text-lime-300 transition" href="#">Blog</a>
@@ -51,7 +51,7 @@
         <!-- Muestra si el usuario SÍ ha iniciado sesión -->
         <div class="hidden lg:block relative">
         <button (click)="toggleProfileMenu()" class="flex items-center gap-3">
-          <span class="text-sm font-medium hidden sm:inline text-slate-200">Hola, {{ authService.currentUser()?.name }}</span>
+          <span class="text-sm font-medium hidden sm:inline text-slate-200">Hola, {{ authService.user()?.name }}</span>
           <img class="w-9 h-9 rounded-full object-cover border-2 border-lime-400/50" [src]="authService.currentUserAvatar()" alt="Avatar">
         </button>
         @if (isProfileMenuOpen()) {
@@ -108,7 +108,7 @@
           <span class="ms-3">Inicio</span>
         </a>
       </li>
-      @if (authService.currentUser()?.rol === 'admin' || authService.currentUser()?.rol === 'instructor') {
+      @if (authService.user()?.rol === 'admin' || authService.user()?.rol === 'instructor') {
         <li>
           <a routerLink="/dashboard" class="flex items-center p-2 text-slate-200 rounded-lg hover:bg-gray-700 group">
             <span class="ms-3">Dashboard</span>
