--- a/src/app/pages/courses/courses.component.html
+++ b/src/app/pages/courses/courses.component.html
@@ -117,8 +117,8 @@
                 <input type="number" id="price_usd" formControlName="price_usd" class="border text-sm rounded-lg block w-full p-2.5 bg-slate-700 border-slate-600 placeholder-gray-400 text-white focus:ring-lime-500 focus:border-lime-500" required>
               </div>
               <div>
-                <label for="price_soles" class="block mb-2 text-sm font-medium text-gray-300">Precio (S/.)</label>
-                <input type="number" id="price_soles" formControlName="price_soles" class="border text-sm rounded-lg block w-full p-2.5 bg-slate-700 border-slate-600 placeholder-gray-400 text-white focus:ring-lime-500 focus:border-lime-500" required>
+                <label for="price_mxn" class="block mb-2 text-sm font-medium text-gray-300">Precio (MXN)</label>
+                <input type="number" id="price_mxn" formControlName="price_mxn" class="border text-sm rounded-lg block w-full p-2.5 bg-slate-700 border-slate-600 placeholder-gray-400 text-white focus:ring-lime-500 focus:border-lime-500" required>
               </div>
               <div class="md:col-span-2">
                 <label for="description" class="block mb-2 text-sm font-medium text-gray-300">Descripción</label>
